treewide: move all methods to interface + record
big change, big break. failing tests need to be fixed.